fixing sprite and scrollbar

--- a/chatbotineg/src/app/escape-game/game/room1/enigme1/enigme1.component.scss
+++ b/chatbotineg/src/app/escape-game/game/room1/enigme1/enigme1.component.scss
@@ -1,6 +1,6 @@
 .enigme1 {
     background-color: #6fc9e7;
-    height: calc(100% - 142px);
+    height: calc(100% - 150px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -155,7 +155,7 @@
 
 @media only screen and (max-width: 1300px) {
     .porte {
-        width: 45vw;
+        width: 50vw;
     }
 }
 
