--- a/chatbotineg/src/app/escape-game/game/room1/enigme2/enigme2.component.scss
+++ b/chatbotineg/src/app/escape-game/game/room1/enigme2/enigme2.component.scss
@@ -62,7 +62,7 @@
 
 .enigme2 {
     background-color: #6fc9e7;
-    height: calc(100% - 142px);
+    height: calc(100% - 150px);
     display: flex;
     justify-content: center;
     align-items: center;
