--- a/chatbotineg/src/app/escape-game/game/room1/enigme3/enigme3.component.scss
+++ b/chatbotineg/src/app/escape-game/game/room1/enigme3/enigme3.component.scss
@@ -98,7 +98,7 @@
 
 .enigme3 {
     background-color: #6fc9e7;
-    height: calc(100% - 142px);
+    height: calc(100% - 150px);
     display: flex;
     justify-content: center;
     align-items: center;
