--- a/chatbotineg/src/app/escape-game/game/room2/enigme4/enigme4.component.scss
+++ b/chatbotineg/src/app/escape-game/game/room2/enigme4/enigme4.component.scss
@@ -161,7 +161,7 @@
 
 .enigme4 {
     background-color: #6fc9e7;
-    height: calc(100% - 142px);
+    height: calc(100% - 150px);
     display: flex;
     justify-content: center;
     align-items: center;
