--- a/chatbotineg/src/app/escape-game/game/room2/enigme6/enigme6.component.scss
+++ b/chatbotineg/src/app/escape-game/game/room2/enigme6/enigme6.component.scss
@@ -344,7 +344,7 @@
 
 .enigme6 {
     background-color: #6fc9e7;
-    height: calc(100% - 142px);
+    height: calc(100% - 150px);
     display: flex;
     align-items: center;
     justify-content: center;
